k8s/ddp-auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name:  ddp-auth
  labels:
    app: ddp-group-api
spec:
  type: LoadBalancer
  selector:
    app:  ddp-auth
  ports:
  - name:  http
    port:  3000
