k8s/ddp-portal-service.yml
apiVersion: v1
kind: Service
metadata:
  name:  ddp-portal
spec:
  selector:
    app: ddp-portal
  type:  LoadBalancer
  ports:
  - name:  http
    port:  80
